--- a/docs/pages/docs/components/card.mdx
+++ b/docs/pages/docs/components/card.mdx
@@ -10,7 +10,7 @@ demo-columns: 2
 --- demo ---
 #### 设置背景图
 ``` jsx
-import { Card } from 'zeus'
+import { Card } from 'zeus-ui'
 class CardWithBackgroundDemo extends React.Component {
   render(){
     return (
@@ -28,7 +28,7 @@ class CardWithBackgroundDemo extends React.Component {
 #### 不同形态的卡片
 卡片有三种不同的形式，分别是card, picture 和 atlas。
 ``` jsx
-import { Card } from 'zeus'
+import { Card } from 'zeus-ui'
 class CardWithOperatorDemo extends React.Component {
   render(){
     return (
@@ -70,7 +70,7 @@ class CardWithOperatorDemo extends React.Component {
 #### 带标签的卡片
  
 ``` jsx
-import { Card } from 'zeus'
+import { Card } from 'zeus-ui'
 class CardWithTagDemo extends React.Component {
   render(){
     return (
@@ -91,7 +91,7 @@ class CardWithTagDemo extends React.Component {
 #### 小点的卡片
 设置size为small可以让标题内容缩小
 ``` jsx
-import { Card } from 'zeus'
+import { Card } from 'zeus-ui'
 class SmallCardDemo extends React.Component {
   render(){
     return (
@@ -111,7 +111,7 @@ class SmallCardDemo extends React.Component {
 #### 标题位置修改
 设置修改标题的位置
 ``` jsx
-import { Card } from 'zeus'
+import { Card } from 'zeus-ui'
 class BottomTitleCardDemo extends React.Component {
   render(){
     return (
