--- a/docs/pages/docs/components/collapse.mdx
+++ b/docs/pages/docs/components/collapse.mdx
@@ -10,7 +10,7 @@ demo-columns: 1
 #### 折叠面板
 折叠面板通常用于大量数据在同一个页面时，隐藏不必要的数据。
 ``` jsx
-import { Collapse, CollapseItem} from 'zeus'
+import { Collapse, CollapseItem} from 'zeus-ui'
 
 class CollapseDemo extends React.Component {
   state = {
