--- a/docs/pages/docs/components/datepicker.mdx
+++ b/docs/pages/docs/components/datepicker.mdx
@@ -9,7 +9,7 @@ demo-columns: 2
 --- demo ---
 #### 日期选择器
 ``` jsx
-import { DatePicker } from 'zeus'
+import { DatePicker } from 'zeus-ui'
 
 class DatePickerDemo extends React.Component {
   state = {
@@ -31,7 +31,7 @@ class DatePickerDemo extends React.Component {
 --- demo ---
 #### 日期段选择器
 ``` jsx
-import { RangePicker } from 'zeus' 
+import { RangePicker } from 'zeus-ui' 
 
 class RangePickerDemo extends React.Component {
   state = {
