--- a/docs/pages/docs/components/dropdown.mdx
+++ b/docs/pages/docs/components/dropdown.mdx
@@ -11,7 +11,7 @@ demo-columns: 2
 
 可以通过tigger属性去设置触发方式，触发方式有两种hover和click，默认为hover
 ``` jsx
-import { Dropdown } from 'zeus'
+import { Dropdown } from 'zeus-ui'
 
 class DropdownDemo extends React.Component {
   render() {
@@ -35,7 +35,7 @@ class DropdownDemo extends React.Component {
 #### 可控下拉菜单
 也可以去手动控制组件的值，用过isOpen和onToggle来控制状态的改变
 ``` jsx
-import { Dropdown } from 'zeus'
+import { Dropdown } from 'zeus-ui'
 
 class HoverDropdownDemo extends React.Component {
   state = {
