--- a/docs/pages/docs/components/form.mdx
+++ b/docs/pages/docs/components/form.mdx
@@ -9,7 +9,7 @@ demo-columns: 2
 #### 表单
 常见的表单是由多个部分组成，包括文字提示，错误提示，标签，以及用来接受用户信息的元素包括输入框，选项卡，复选框
 ``` jsx
-import { Form, FormControl, Input } from 'zeus'
+import { Form, FormControl, Input } from 'zeus-ui'
 class Page extends React.Component {
   render() {
     return (
@@ -35,7 +35,7 @@ class Page extends React.Component {
 #### 不同的输入形式
 常见的表单是由多个部分组成，包括文字提示，错误提示，标签，提交按钮，以及用来接受用户信息的元素包括输入框，选项卡，复选框
 ``` jsx
-import { Checkbox, FormControl, Select, Button } from 'zeus'
+import { Checkbox, FormControl, Select, Button } from 'zeus-ui'
 class CheckboxDemo extends React.Component {
   state = {
     checked: null,
