--- a/docs/pages/docs/components/grid.mdx
+++ b/docs/pages/docs/components/grid.mdx
@@ -9,7 +9,7 @@
 通过设置 `Row` 的 `gutter` 属性来改变内容块直接的间距
 
 ``` jsx
-import { Row, Col } from 'zeus'
+import { Row, Col } from 'zeus-ui'
 
 class GridDemo extends React.Component {
   render() {
