--- a/docs/pages/docs/components/heading.mdx
+++ b/docs/pages/docs/components/heading.mdx
@@ -10,7 +10,7 @@ demo-columns: 2
 #### 标题
 段落或者内容块的标题
 ``` jsx
-import { Heading } from 'zeus'
+import { Heading } from 'zeus-ui'
 
 class HeadingDemo extends React.Component {
   render() {
