--- a/docs/pages/docs/components/input.mdx
+++ b/docs/pages/docs/components/input.mdx
@@ -12,7 +12,7 @@ demo-columns: 2
 基本用法和原生input是一样的
 
 ``` jsx
-import { Input } from 'zeus'
+import { Input } from 'zeus-ui'
 
 class InputDemo extends React.Component {
   render() {
@@ -40,7 +40,7 @@ class InputDemo extends React.Component {
 禁止用户输入
 
 ``` jsx
-import { Input } from 'zeus'
+import { Input } from 'zeus-ui'
 
 class DisabledInputDemo extends React.Component {
   render() {
@@ -62,7 +62,7 @@ class DisabledInputDemo extends React.Component {
 当表单的内容有一定限制时，需要用户输入检查
 
 ``` jsx
-import { Input, FormControl, FormHelperText } from 'zeus'
+import { Input, FormControl, FormHelperText } from 'zeus-ui'
 
 class InputWithErrorDemo extends React.Component {
   emailReg = /[A-Za-z0-9\u4e00-\u9fa5]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/
