--- a/docs/pages/docs/components/list.mdx
+++ b/docs/pages/docs/components/list.mdx
@@ -11,7 +11,7 @@ demo-columns: 2
 #### 列表
 很常见的一种展示数据的方法
 ``` jsx
-import {List, ListItem} from 'zeus'
+import {List, ListItem} from 'zeus-ui'
 
 class ListDemo extends React.Component {
   render() {
