--- a/docs/pages/docs/components/menus.mdx
+++ b/docs/pages/docs/components/menus.mdx
@@ -8,7 +8,7 @@ demo-columns: 1
 #### 菜单栏
 用于导航
 ``` jsx
-import { Menu, MenuItem } from 'zeus'
+import { Menu, MenuItem } from 'zeus-ui'
 
 class MenuDemo extends React.Component {
   render() {
@@ -40,7 +40,7 @@ class MenuDemo extends React.Component {
 #### 带指示箭头的菜单栏
 可以用一个小箭头更加明确的指出当前处于active状态的菜单栏
 ``` jsx
-import { Menu, MenuItem } from 'zeus'
+import { Menu, MenuItem } from 'zeus-ui'
 
 class MenuDemoWithArrow extends React.Component {
   render() {
@@ -72,7 +72,7 @@ class MenuDemoWithArrow extends React.Component {
 #### 二级菜单
 
 ``` jsx
-import { Menu, MenuItem, SubMenu} from 'zeus'
+import { Menu, MenuItem, SubMenu} from 'zeus-ui'
 
 class MenuDemoWithSub extends React.Component {
   render() {
