--- a/docs/pages/docs/components/pagination.mdx
+++ b/docs/pages/docs/components/pagination.mdx
@@ -5,7 +5,7 @@
 #### pagination
 分页
 ``` jsx
-import { Pagination } from 'zeus'
+import { Pagination } from 'zeus-ui'
 
 class Page extends React.Component {
   state = {
