--- a/docs/pages/docs/components/select.mdx
+++ b/docs/pages/docs/components/select.mdx
@@ -11,7 +11,7 @@ demo-columns: 2
 在多个选项中，选择一个确切的值作为选项的值，以接受用户的输入信息
 
 ``` jsx
-import { Select } from 'zeus'
+import { Select } from 'zeus-ui'
 
 class SelectDemo extends React.Component {
   render() {
@@ -39,7 +39,7 @@ class SelectDemo extends React.Component {
 在多个选项中，选择一个确切的值作为选项的值，以接受用户的输入信息
 
 ``` jsx
-import { Select, FormControl } from 'zeus'
+import { Select, FormControl } from 'zeus-ui'
 
 class Page extends React.Component {
   state = {
