--- a/docs/pages/docs/components/spinner.mdx
+++ b/docs/pages/docs/components/spinner.mdx
@@ -10,7 +10,7 @@ demo-columns: 2
 加载状态时的遮罩层
 
 ``` jsx
-import { Spinner } from 'zeus'
+import { Spinner } from 'zeus-ui'
 
 class SpinnerDemo extends React.Component {
   render() {
@@ -30,7 +30,7 @@ class SpinnerDemo extends React.Component {
 修改遮罩层样式
 
 ``` jsx
-import { Spinner } from 'zeus'
+import { Spinner } from 'zeus-ui'
 
 class SpinnerWithMinHeightDemo extends React.Component {
   render() {
