--- a/docs/pages/docs/components/table.mdx
+++ b/docs/pages/docs/components/table.mdx
@@ -7,7 +7,7 @@
 展示基本的数据
 
 ``` jsx
-import { Table } from 'zeus'
+import { Table } from 'zeus-ui'
 export class ButtonDemo2 extends React.Component {
   render(){
       const columns = [
