--- a/docs/pages/docs/components/toast.mdx
+++ b/docs/pages/docs/components/toast.mdx
@@ -10,7 +10,7 @@ demo-columns: 2
 用户反馈用户的操作结果
 
 ``` jsx
-import { Toast, Button } from 'zeus'
+import { Toast, Button } from 'zeus-ui'
 
 class ToastDemo extends React.Component {
   time = 1000
@@ -42,7 +42,7 @@ class ToastDemo extends React.Component {
 
 通过模态框的形式去展示信息，相比toast，模态框可以更加自如的交互，在模态框内也可以完成相对复杂的操作
 ``` jsx
-import { Modal, Button } from 'zeus'
+import { Modal, Button } from 'zeus-ui'
 class ModalDemo extends React.Component {
   state = {
     isOpen: false
