--- a/docs/pages/docs/components/tooltip.mdx
+++ b/docs/pages/docs/components/tooltip.mdx
@@ -10,7 +10,7 @@ demo-columns: 2
 给予提示
 
 ``` jsx
-import { Tooltip } from 'zeus'
+import { Tooltip } from 'zeus-ui'
 
 class TooltipDemo extends React.Component {
   render() {
@@ -30,7 +30,7 @@ class TooltipDemo extends React.Component {
 可以通过placement改变提示语的位置，共支持12种，分别是 `top`, `top-start`, `top-end`, `right`, `right-start`, `right-end`, `bottom`, `bottom-start`, `bottom-end`, `left`, `left-start`, `left-end`
 
 ``` jsx
-import { Tooltip } from 'zeus'
+import { Tooltip } from 'zeus-ui'
 
 class TooltipPlaceDemo extends React.Component {
   render() {
