--- a/docs/pages/docs/components/tabs.mdx
+++ b/docs/pages/docs/components/tabs.mdx
@@ -8,7 +8,7 @@ demo-columns: 2
 #### 选项卡
 用于导航
 ``` jsx
-import { Tabs, Tab } from 'zeus'
+import { Tabs, Tab } from 'zeus-ui'
 
 class Page extends React.Component {
   render() {
